Working in html and trying to use css file. :bug:

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Module 3 - Soltuion</title>
-        <h1>Head Here</h1>
+<html lang="en">
+  <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Module 3 - Solution</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>Body Here</h1>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-brand"><h1>Food, LLC</h1></div>
+            </div>
+        </nav>
+
+        <h1 class="text-center h-1">Our Menu</h1>
+
+        <section id="Sushi" class="container col-md-4 col-sm-6 col-xs-12">
+            <h3 class="text-center">Sushi</h3>
+            <div>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
+                mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
+                tellus, eu iaculis eros. Morbi venenatis ligula non iaculis cursus. Cras aliquam, dolor placerat suscipit 
+                auctor, libero tortor lobortis sapien, vel porttitor turpis nulla at felis. Vestibulum non pellentesque erat. 
+                Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
+                et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
+                tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
+
+                Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
+                felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
+                risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
+                posuere non eros. Nunc scelerisque suscipit erat, sit amet porta metus suscipit at. Nullam pretium est lacus, et 
+                sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
+                vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
+                dolor. Duis consequat non eros semper auctor.
+            </div>
+        </section>
+
+        <section id="Chicken" class="container col-md-4 col-sm-6 col-xs-12">
+            <h3 class="text-center">Chicken</h3>
+            <div>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
+                mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
+                tellus, eu iaculis eros. Morbi venenatis ligula non iaculis cursus. Cras aliquam, dolor placerat suscipit 
+                auctor, libero tortor lobortis sapien, vel porttitor turpis nulla at felis. Vestibulum non pellentesque erat. 
+                Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
+                et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
+                tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
+
+                Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
+                felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
+                risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
+                posuere non eros. Nunc scelerisque suscipit erat, sit amet porta metus suscipit at. Nullam pretium est lacus, et 
+                sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
+                vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
+                dolor. Duis consequat non eros semper auctor.
+            </div>
+        </section>
+
+        <section id="Beef" class="container col-md-4 col-sm-12 col-xs-12">
+            <h3 class="text-center">Beef</h3>
+            <div>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
+                mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
+                tellus, eu iaculis eros. Morbi venenatis ligula non iaculis cursus. Cras aliquam, dolor placerat suscipit 
+                auctor, libero tortor lobortis sapien, vel porttitor turpis nulla at felis. Vestibulum non pellentesque erat. 
+                Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
+                et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
+                tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
+
+                Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
+                felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
+                risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
+                posuere non eros. Nunc scelerisque suscipit erat, sit amet porta metus suscipit at. Nullam pretium est lacus, et 
+                sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
+                vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
+                dolor. Duis consequat non eros semper auctor.
+            </div>
+        </section>
         <script src="js/jquery-2.1.4.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
