--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -6,19 +6,44 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Module 3 - Solution</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <nav id="header-nav" class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-brand"><h1>Food, LLC</h1></div>
-            </div>
-        </nav>
+        <header>
+            <nav id="header-nav" class="navbar navbar-default">
+                <div class="container">
+                    <a href="index.html" class="navbar-brand"><h1>Food, LLC</h1></a>
+                </div>
 
-        <h1 class="text-center h-1">Our Menu</h1>
+                <div class="container">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                </div>
+
+                <div id="collapsable-nav" class="collapse navbar-collapse">
+                    <ul id="nav-list" class="nav navbar-nav navbar-right">
+                     <li class="visible-xs">
+                       <a href="#Sushi">Sushi</a>
+                     </li>
+                     <li class="visible-xs">
+                       <a href="#Chicken">Chicken</a>
+                     </li>
+                     <li class="visible-xs">
+                       <a href="#Beef">Beef</a>
+                     </li>
+                   </ul>
+            </nav>
+        </header>
+
+        <h1 class="text-center">Our Menu</h1>
 
         <section id="Sushi" class="container col-md-4 col-sm-6 col-xs-12">
-            <h3 class="text-center">Sushi</h3>
+            <h3 class="text-center Sushi">Sushi</h3>
             <div>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
                 mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
@@ -27,7 +52,8 @@
                 Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
                 et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
                 tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
-
+                <br>
+                <br>
                 Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
                 felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
                 risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
@@ -35,11 +61,33 @@
                 sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
                 vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
                 dolor. Duis consequat non eros semper auctor.
+                <br>
+                <br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
+                mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
+                tellus, eu iaculis eros. Morbi venenatis ligula non iaculis cursus. Cras aliquam, dolor placerat suscipit 
+                auctor, libero tortor lobortis sapien, vel porttitor turpis nulla at felis. Vestibulum non pellentesque erat. 
+                Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
+                et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
+                tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
+                <br>
+                <br>
+                Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
+                felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
+                risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
+                posuere non eros. Nunc scelerisque suscipit erat, sit amet porta metus suscipit at. Nullam pretium est lacus, et 
+                sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
+                vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
+                dolor. Duis consequat non eros semper auctor.
+                <br>
+                <br>
+                <div class="text-center">(End of Sushi Section)</div>
+                <a href="#top" class="text-center visible-xs visible-sm">Back to the Top</a>
             </div>
         </section>
 
         <section id="Chicken" class="container col-md-4 col-sm-6 col-xs-12">
-            <h3 class="text-center">Chicken</h3>
+            <h3 class="text-center Chicken">Chicken</h3>
             <div>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
                 mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
@@ -48,7 +96,8 @@
                 Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
                 et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
                 tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
-
+                <br>
+                <br>
                 Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
                 felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
                 risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
@@ -56,11 +105,33 @@
                 sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
                 vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
                 dolor. Duis consequat non eros semper auctor.
+                <br>
+                <br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
+                mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
+                tellus, eu iaculis eros. Morbi venenatis ligula non iaculis cursus. Cras aliquam, dolor placerat suscipit 
+                auctor, libero tortor lobortis sapien, vel porttitor turpis nulla at felis. Vestibulum non pellentesque erat. 
+                Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
+                et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
+                tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
+                <br>
+                <br>
+                Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
+                felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
+                risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
+                posuere non eros. Nunc scelerisque suscipit erat, sit amet porta metus suscipit at. Nullam pretium est lacus, et 
+                sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
+                vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
+                dolor. Duis consequat non eros semper auctor. 
+                <br>
+                <br>
+                <div class="text-center">(End of Chicken Section)</div>
+                <a href="#top" class="text-center visible-xs visible-sm">Back to the Top</a>
             </div>
         </section>
 
         <section id="Beef" class="container col-md-4 col-sm-12 col-xs-12">
-            <h3 class="text-center">Beef</h3>
+            <h3 class="text-center Beef">Beef</h3>
             <div>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
                 mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
@@ -69,7 +140,8 @@
                 Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
                 et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
                 tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
-
+                <br>
+                <br>
                 Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
                 felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
                 risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
@@ -77,8 +149,31 @@
                 sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
                 vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
                 dolor. Duis consequat non eros semper auctor.
+                <br>
+                <br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nibh velit, iaculis sed risus eget, 
+                mollis bibendum erat. Proin leo urna, eleifend at libero vel, ultricies suscipit mi. Aenean at sodales 
+                tellus, eu iaculis eros. Morbi venenatis ligula non iaculis cursus. Cras aliquam, dolor placerat suscipit 
+                auctor, libero tortor lobortis sapien, vel porttitor turpis nulla at felis. Vestibulum non pellentesque erat. 
+                Phasellus egestas varius placerat. Suspendisse consectetur, neque ut semper tempus, nunc lacus pulvinar arcu, 
+                et sagittis massa felis non dolor. Vestibulum fringilla efficitur lacus quis feugiat. Quisque sagittis lorem 
+                tempus enim sagittis rhoncus. Etiam in arcu arcu. Nulla facilisi.
+                <br>
+                <br>
+                Vivamus blandit lacus ac pretium porttitor. Pellentesque condimentum placerat metus et mollis. Aliquam turpis 
+                felis, accumsan semper massa sit amet, molestie cursus velit. Nam vitae justo ut metus pulvinar mattis vitae in 
+                risus. Maecenas fermentum neque neque, a congue mauris congue vel. Cras neque elit, porttitor sed dapibus nec, 
+                posuere non eros. Nunc scelerisque suscipit erat, sit amet porta metus suscipit at. Nullam pretium est lacus, et 
+                sagittis nisl tincidunt et. Quisque imperdiet urna at ligula placerat congue. Nam vel ex quis lectus fringilla 
+                vehicula. Aenean vestibulum quam ut dui tristique, ac elementum nibh dictum. Morbi eu feugiat quam, ac luctus 
+                dolor. Duis consequat non eros semper auctor. 
+                <br>
+                <br>
+                <div class="text-center">(End of Beef Section)</div>
+                <a href="#top" class="text-center visible-xs visible-sm">Back to the Top</a>
             </div>
         </section>
+        <a href="#top" class="text-center visible-lg visible-md">Back to the Top</a>
         <script src="js/jquery-2.1.4.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
